automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -174,10 +174,10 @@
       "1. 0\n",
       "2. None\n",
       "3. 1000\n",
-      "4. Sorry, you do not have enough funds to withdrawal $1000 and maintain your minimum balance of $250\n",
+      "4. Sorry, you do not have enough funds to withdraw $1000 and maintain your minimum balance of $250\n",
       "5. $100\n",
       "6. Sorry, your maximum withdraw amount is 150\n",
-      "7. Thank you for the deposit of $250. Your balance is now: $1150.0\n",
+      "7. Thank you for the deposit of $250.0. Your balance is now: $1150.0\n",
       "8. Thank you for the deposit of $2.5. Your balance is now: $1152.5\n",
       "9. hello is not a number\n",
       "10. {'_balance': 1152.5, '_minimum_balance': 250, '_max_withdrawal': 150}\n"
@@ -189,14 +189,15 @@
     "    \n",
     "    def set_balance(self, amount):\n",
     "        self._balance += amount\n",
+    "        pass\n",
     "    \n",
     "    def get_balance(self):\n",
     "        return self._balance\n",
     "        \n",
     "    def make_withdrawal(self, amount_requested):\n",
-    "        if (self.check_min_bal(amount_requested)):\n",
+    "        if self.check_min_bal(amount_requested):\n",
     "            return self.check_min_bal(amount_requested)\n",
-    "        if (self.check_max_withdrawal(amount_requested)):\n",
+    "        if self.check_max_withdrawal(amount_requested):\n",
     "            return self.check_max_withdrawal(amount_requested)\n",
     "        else: \n",
     "            self.set_balance(-amount_requested)\n",
@@ -206,7 +207,7 @@
     "        if ((self.get_balance() - amount_requested) > self._minimum_balance):\n",
     "            return False\n",
     "        else:\n",
-    "            return f\"Sorry, you do not have enough funds to withdrawal ${amount_requested} and maintain your minimum balance of ${self._minimum_balance}\"\n",
+    "            return f\"Sorry, you do not have enough funds to withdraw ${amount_requested} and maintain your minimum balance of ${self._minimum_balance}\"\n",
     "    \n",
     "    def check_max_withdrawal(self, amount_requested):\n",
     "        if (self._max_withdrawal > amount_requested):\n",
@@ -216,7 +217,7 @@
     "        \n",
     "    def make_deposit(self, amount_to_deposit):\n",
     "        try: \n",
-    "            (float(amount_to_deposit))\n",
+    "            amount_to_deposit = float(amount_to_deposit)\n",
     "            self.set_balance((float(amount_to_deposit)))\n",
     "            return f\"Thank you for the deposit of ${amount_to_deposit}. Your balance is now: ${self._balance}\"\n",
     "        except:\n",
@@ -271,23 +272,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GETTING BALANCE\n",
       "1. 0\n",
-      "SETTING BALANCE\n",
       "2. None\n",
-      "GETTING BALANCE\n",
       "3. 1000\n",
-      "GETTING BALANCE\n",
-      "GETTING BALANCE\n",
       "4. Sorry, you do not have enough funds to withdrawal $1000 and maintain your minimum balance of $250\n",
-      "GETTING BALANCE\n",
-      "SETTING BALANCE\n",
-      "5. $100\n",
-      "GETTING BALANCE\n",
+      "5. Your balance is now $900\n",
       "6. Sorry, your maximum withdraw amount is 150\n",
-      "SETTING BALANCE\n",
-      "7. Thank you for the deposit of $250. Your balance is now: $1150.0\n",
-      "SETTING BALANCE\n",
+      "7. Thank you for the deposit of $250.0. Your balance is now: $1150.0\n",
       "8. Thank you for the deposit of $2.5. Your balance is now: $1152.5\n",
       "9. hello is not a number\n",
       "10. {'_balance': 1152.5, '_minimum_balance': 250, '_max_withdrawal': 150}\n"
@@ -295,14 +286,14 @@
     }
    ],
    "source": [
-    "class BankAccount():\n",
+    "class BankAccount:\n",
     "    \n",
     "    def set_balance(self, amount):\n",
-    "        print(\"SETTING BALANCE\")\n",
+    "        #print(\"SETTING BALANCE\")\n",
     "        self._balance += amount\n",
     "    \n",
     "    def get_balance(self):\n",
-    "        print(\"GETTING BALANCE\")\n",
+    "        #print(\"GETTING BALANCE\")\n",
     "        return self._balance\n",
     "        \n",
     "    def make_withdrawal(self, amount_requested):\n",
@@ -313,7 +304,7 @@
     "        else: \n",
     "# ----------- NOTE THE CHANGE FROM self.set_balance(amount) TO self.balance = amount --------------- #\n",
     "            self.balance = -amount_requested\n",
-    "            return f\"${amount_requested}\"\n",
+    "            return f\"Your balance is now ${self._balance}\"\n",
     "            \n",
     "    def check_min_bal(self, amount_requested):\n",
     "# ----------- NOTE THE CHANGE FROM self.get_balance() TO self.balance = --------------- #\n",
@@ -330,7 +321,7 @@
     "        \n",
     "    def make_deposit(self, amount_to_deposit):\n",
     "        try: \n",
-    "            (float(amount_to_deposit))\n",
+    "            amount_to_deposit = float(amount_to_deposit)\n",
     "# ----------- NOTE THE CHANGE FROM self.set_balance(amount) TO self.balance = amount --------------- #\n",
     "            self.balance = float(amount_to_deposit)\n",
     "            return f\"Thank you for the deposit of ${amount_to_deposit}. Your balance is now: ${self._balance}\"\n",
@@ -434,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
